@@ -2,6 +2,8 @@ Revision history for JSON-Schema-Modern
 
 {{$NEXT}}
           - add fallback media type handling for text/*
+          - performance is (hopefully) improved by delaying some calculations
+            in annotations until they are needed
 
 0.557     2022-10-30 21:59:04Z
           - improvements to processing of keywords in the Content vocabulary
